Added footer, added favicon, some fixes

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,12 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="theme-color" content="#1470bb" />
+    <meta name="description" content="System zgłoszeń serwisowych" />
+    <!-- https://icons8.com/icon/G2T3WeMwzSZf/support -->
+    <link rel="shortcut icon" type="image/png" href="<%= BASE_URL %>favicon.png" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" />
-    <title>ticket-system</title>
+    <title>System zgłoszeń</title>
   </head>
   <body>
     <noscript>This website requires JavaScript.</noscript>
